--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+Django = "*"
 graphene-django = "*"
-django-graphql-jwt = "*"
 django-cors-headers = "*"
+pyjwt = "==1.7.0"
 
 [dev-packages]
 autopep8 = "*"
