--- a/pokemon-front-end/package.json
+++ b/pokemon-front-end/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "tailwind": "^4.0.0",
     "web-vitals": "^1.1.0"
